# sheet-music-splitter

./: .gitignore  Cargo.toml  README.md  build.rs
src/: crop.rs  detect.rs  main.rs  pipeline.rs
